# flask-error-logger

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/flask_error_logger/: __init__.py  config.py  error_db.py  error_logger.py  logger.py
src/flask_error_logger/error_codes/: __init__.py  error_4xx.py  error_5xx.py
src/flask_error_logger/error_templates/: __init__.py  default_templates.py
tests/: conftest.py  test_4xx.py  test_5xx.py  test_factory.py
