[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-error-logger"
version = "0.0.1"
authors = [
  { name="Rohijit Sinha", email="sinharohijit97@gmail.com" },
]
description = "A package for logging flask errors and warnings in an sqlite3 db."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rohijit-offsureit/flask-error-logger"
"Bug Tracker" = "https://github.com/rohijit-offsureit/flask-error-logger/issues"

dependencies = [
    "flask>=2.0",
    "peewee>=3.15.0",
    "jinja2>=3.0.1"
]

[tool.pytest.ini_options]
pythonpath = [
  ".","src"
]
